fix small bugs in compilation

--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -25,4 +25,4 @@
 \usepackage{phonrule}
 \usepackage[glosses,indexonlyfirst,nonumberlist,toc,nomain,mcolblock,,nogroupskip]{leipzig}
 \usepackage{etoolbox}
-\usepackage{/utils/dictionary}
+\usepackage{utils/dictionary}
