add some early phono stuff

--- a/dict/old_gob_dict.tex
+++ b/dict/old_gob_dict.tex
@@ -1,7 +1,26 @@
 \renewcommand{\DictionaryHeadwordFormat}[1]{\textbf{*\textit{#1}}}
 \renewcommand{\DictionaryWordFormat}[1]{*\textit{#1}}
 
-placeholder
-% \begin{multicols*}{2}
-    
-% \end{multicols*}
+\begin{multicols*}{2}
+
+    \entry{kit\lamino{}}{n.}{goods}[oldlang:goods]
+    \begin{senses}
+        \sense*{goods, wares, products}
+    \end{senses}
+
+    \entry{kit\apico{}}{n.}{excrement}[oldlang:excrement]
+    \begin{senses}
+        \sense*{excrement, poo, shit}
+    \end{senses}
+
+    \entry{n\lamino{}am}{v.}{provide}[oldlang:provide]
+    \begin{senses}
+        \sense*{to provide, to supply}
+    \end{senses}
+
+    \entry{n\apico{}am}{v.}{eat}[oldlang:eat]
+    \begin{senses}
+        \sense*{to eat, to drink, to consume}
+    \end{senses}
+
+\end{multicols*}
