--- a/preamble/geob_macros.tex
+++ b/preamble/geob_macros.tex
@@ -1,3 +1,6 @@
+%---continent name---%
+\newcommand{\thecontinent}{This Continent}
+\newcommand{\langfam}{Goblinoid}
 \newcommand{\lang}{Geoboŋ}
 \newcommand{\oldlang}{Old Gobling}
 
