--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -4,6 +4,7 @@
 \usepackage{amssymb} % another common package for symbols
 \usepackage{unicode-math}
 \usepackage{url} % helps typeset URLs properly, typically with the command \url
+\usepackage[english=american]{csquotes}
 \usepackage{tikz}
 \usepackage{forest}
 \usepackage{wrapfig}
@@ -25,4 +26,5 @@
 \usepackage{phonrule}
 \usepackage[glosses,indexonlyfirst,nonumberlist,toc,nomain,mcolblock,,nogroupskip]{leipzig}
 \usepackage{etoolbox}
+\usepackage{todonotes}
 \usepackage{utils/dictionary}
